--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@next/bundle-analyzer": "^12.2.4",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
