--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "markdown-it": "^13.0.1",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.4",
