--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-responsive": "^9.0.0-beta.10"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.14.1",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
